animated play section

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "global": "^4.4.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-cli": "^2.0.1",
     "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
