player section done

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "flubber": "^0.4.2",
     "global": "^4.4.0",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-cli": "^2.0.1",
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-animations": "^0.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
